took off scss failure and success message formatting because no longer required (bootstrap covers this already)

--- a/app/scss/adminPage.scss
+++ b/app/scss/adminPage.scss
@@ -140,11 +140,3 @@ body {
 #addTestName {
   margin-bottom: 10px;
 }
-
-.success-message {
-  color: $success-message;
-}
-
-.failure-message {
-  color: $failure-message
-}
